# yolov8_ros

./: CMakeLists.txt  README.md  package.xml
launch/: detect.launch
scripts/: detect.py  yolo_test.py
scripts/runs/detect/predict/labels/: image1.txt
scripts/runs/detect/train/: args.yaml  results.csv
scripts/runs/detect/train2/: args.yaml  results.csv
yolov8_ros_msgs/: CMakeLists.txt  package.xml
yolov8_ros_msgs/msg/: BoundingBox.msg
